--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,4 @@
 #footerBlock {background-color:rgb(106, 225, 225);text-align:center;padding:10px;}
 #footerBlock div {background-color:rgb(106, 225, 146);}
 
+#addSuccess {visibility:hidden; color:black;background-color:rgb(65, 182, 65);padding:2px 8px;border-radius:6px;margin-left:10px;opacity:0;transition:opacity 0.3s ease-in-out;}
