--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,13 @@
 .menuLeft li, .menuRight li {display:inline;}
 .menuLeft li {margin-right:15px;}
 .menuLeft li a{color:black;transition:0.3s;}
-.menuLeft li a:hover {color:white;}
+.menuLeft li a:hover {text-decoration:underline;}
 .menuRight {text-align:right;}
 .menuRight li {margin-left:15px;}
 .menuRight input {border-radius:4px;padding:1px 3px;border:1px solid transparent;}
 
-#searchBtn {outline:none;color:#4D77FF;background-color:#F2FA5A;padding:1px 8px;border-radius:2px 8px;border:2px solid #F2FA5A;transition: background-color 0.5s, color 0.5s, border 0.5s;}
-#searchBtn:hover {cursor:pointer;color:#008CBA;background-color: white;border:2px solid white;}
+#searchBtn {outline:none;color:black;background-color:#F2FA5A;padding:1px 8px;border-radius:2px 8px;border:2px solid #F2FA5A;transition: background-color 0.5s, color 0.5s, border 0.5s;}
+#searchBtn:hover {cursor:pointer;color:#008CBA;background-color: white;border:2px solid #008CBA ;}
 
 
 /*----------bannerBlock----------*/
@@ -40,8 +40,8 @@
 #authorName,#bookName {width:400px;border-radius:4px;border:1px solid black;padding:2px 4px;}
 .infoHead {display:inline-block;width:200px;}
 
-#addBtn {color:black;background-color:#56BBF1;padding:2px 8px;border-radius:2px 8px;border:2px solid #56BBF1;transition: background-color 0.7s, color 0.5s, border 0.5s;}
-#addBtn:hover {cursor:pointer;color:black;background-color:#85C88A;border:2px solid #85C88A;}
+#addBtn {color:white;background-color:#008CBA;padding:2px 8px;border-radius:2px 8px;border:2px solid #008CBA;transition: background-color 0.7s, color 0.5s, border 0.5s;}
+#addBtn:hover {cursor:pointer;color:#008CBA;background-color: white;border:2px solid #008CBA;}
 
 #bannerBlock #tableDiv {height:550px;overflow-y:auto;}
 #bannerBlock table{border:1px solid black;border-collapse:collapse;width: 1170px;;}
